# zeal-coreutils

./: .gitignore  CHANGELOG  CMakeLists.txt  Makefile  README.md
cmake/: coreutils-config.cmake  coreutils_init.cmake
common/: CMakeLists.txt  date.c  itoa.c  itoa_pad.c  mem_set.c  put_s.c  put_sn.c  put_u8.c  str_ends_with.c  str_len.c  str_pos.c
include/: common.h
lib/: ansi.lib  conio.lib  core.lib  keyboard.lib  windows.lib
libsrc/libansi/: CMakeLists.txt  ansi.c
libsrc/libconio/: CMakeLists.txt  bgcolor.c  cclear.c  cclearxy.c  cgetc.c  chline.c  chlinexy.c  clr_color.c  clreol.c  clrscr.c  cputc.c  cputcxy.c  cputs.c  cputsxy.c  cursor.c  cvline.c  cvlinexy.c  gotox.c  gotoxy.c  gotoy.c  highvideo.c  kbhit.c  lowvideo.c  screensize.c  setcursormode.c  setcursortype.c  target.h  textcolor.c  wherex.c  wherey.c
libsrc/libcore/: CMakeLists.txt  clamp.asm  clamp.c  core.h  date.c  itoa_pad.c  max.asm  max.c  mem_cmp.c  mem_cpy.asm  mem_cpy.c  mem_set.asm  min.asm  min.c  put_c.c  put_hex.c  put_hex8.c  put_s.c  put_sn.c  put_u16.c  put_u8.c  str_cat.c  str_chr.c  str_chrr.c  str_cmp.c  str_cpy.asm  str_cpy.c  str_ends_with.c  str_len.asm  u8tohex.c
libsrc/libkeyboard/: CMakeLists.txt  keyboard.c
libsrc/libwindows/: CMakeLists.txt  banners.c  theme.h  vram.c  window.c  window_active.c  window_clreol.c  window_clrscr.c  window_columns.c  window_gotox.c  window_gotoxy.c  window_gotoy.c  window_putc.c  window_puts.c  window_save.c  window_wherex.c  window_wherey.c  windows.h
src/: CMakeLists.txt  acat.c  cat.c  cp.c  crc32.c  du.c  echo.c  hexdump.c  less.asm  ls.c  mkdir.c  mv.c  return.c  rm.c  setfont.c  stat.c  touch.c  tree.c  xfer.asm  xfer.c
